-- =========================================================
-- AUTHOR: Gerlib Andrii
-- TABLE: books
-- Основна інформація про книги бібліотеки.
-- Бізнес-логіка:
-- Таблиця описує книгу як бібліографічну сутність
-- (назва, ISBN, рік видання), незалежно від кількості
-- фізичних примірників у бібліотеці.
-- Фізичні копії книги обліковуються окремо у book_copies.
-- =========================================================
CREATE TABLE "books" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Унікальний ідентифікатор книги
  "title" varchar(255) NOT NULL,                        -- Назва книги
  "isbn" varchar(17) UNIQUE NOT NULL,                   -- Унікальний ISBN книги
  "publication_year" smallint,                          -- Рік видання книги

  CONSTRAINT "chk_pub_year"
    CHECK (publication_year BETWEEN 1000 AND 2100)      -- Перевірка коректності року
);


-- =========================================================
-- AUTHOR: Gerlib Andrii
-- TABLE: genres
-- Довідник жанрів книг.
-- Бізнес-логіка:
-- Використовується для класифікації книг за жанрами
-- (фантастика, детектив, наукова література тощо).
-- Одна книга може належати до кількох жанрів.
-- =========================================================
CREATE TABLE "genres" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Ідентифікатор жанру
  "name" varchar(255) UNIQUE NOT NULL                    -- Назва жанру
);


-- =========================================================
-- AUTHOR: Gerlib Andrii
-- TABLE: books_genres
-- Зв’язок many-to-many між книгами та жанрами.
-- Бізнес-логіка:
-- Реалізує можливість прив’язки кількох жанрів до книги
-- та одного жанру до багатьох книг.
-- Таблиця використовується для класифікації книг
-- за їх змістом, стилем або типом сюжету.
-- Genre описує саме літературну природу книги:
-- fantasy, detective, sci-fi, romance тощо.
-- Одна книга може мати кілька жанрів.
-- =========================================================
CREATE TABLE "books_genres" (
  "book_id" int NOT NULL,   -- Посилання на книгу
  "genre_id" int NOT NULL,  -- Посилання на жанр

  PRIMARY KEY ("book_id", "genre_id")
);


-- =========================================================
-- AUTHOR: Gerlib Andrii
-- TABLE: authors
-- Автори книг.
-- Бізнес-логіка:
-- Зберігає авторів літературних творів.
-- Один автор може написати багато книг,
-- а одна книга може мати кількох авторів.
-- =========================================================
CREATE TABLE "authors" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Ідентифікатор автора
  "first_name" varchar(50) NOT NULL,                     -- Ім’я автора
  "last_name" varchar(50) NOT NULL                       -- Прізвище автора
);


-- =========================================================
-- AUTHOR: Krysa Oleksandr
-- TABLE: book_authors
-- Зв’язок many-to-many між книгами та авторами.
-- Бізнес-логіка:
-- Реалізує зв’язок між книгами та авторами,
-- підтримуючи співавторство та серії книг.
-- =========================================================
CREATE TABLE "book_authors" (
  "book_id" int NOT NULL,    -- Посилання на книгу
  "author_id" int NOT NULL,  -- Посилання на автора

  PRIMARY KEY ("book_id", "author_id"),

  FOREIGN KEY ("book_id") REFERENCES "books" ("id")
    DEFERRABLE INITIALLY IMMEDIATE,

  FOREIGN KEY ("author_id") REFERENCES "authors" ("id")
    DEFERRABLE INITIALLY IMMEDIATE
);


-- =========================================================
-- AUTHOR: Krysa Oleksandr
-- TABLE: categories
-- Довідник категорій книг.
-- Бізнес-логіка:
-- Таблиця використовується для організаційної
-- або бізнес-класифікації книг у бібліотеці.
-- Category не описує зміст книги, а визначає
-- її роль або місце у бібліотечному процесі:
-- children, educational, archive, rare books,
-- local-history тощо.
-- Одна книга може одночасно належати
-- до кількох категорій.
-- =========================================================
CREATE TABLE "categories" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Ідентифікатор категорії
  "name" varchar(40) UNIQUE NOT NULL                     -- Назва категорії
);


-- =========================================================
-- AUTHOR: Krysa Oleksandr
-- TABLE: book_categories
-- Зв’язок many-to-many між книгами та категоріями.
-- Бізнес-логіка:
-- Дає змогу відносити одну книгу до кількох категорій
-- для покращення пошуку та організації бібліотеки.
-- =========================================================
CREATE TABLE "book_categories" (
  "book_id" int NOT NULL,       -- Посилання на книгу
  "category_id" int NOT NULL,   -- Посилання на категорію

  PRIMARY KEY ("book_id", "category_id"),

  FOREIGN KEY ("book_id") REFERENCES "books" ("id")
    DEFERRABLE INITIALLY IMMEDIATE,

  FOREIGN KEY ("category_id") REFERENCES "categories" ("id")
    DEFERRABLE INITIALLY IMMEDIATE
);


-- =========================================================
-- AUTHOR: Shmyhol Evhenii
-- TABLE: members
-- Читачі бібліотеки.
-- Бізнес-логіка:
-- Зберігає користувачів бібліотеки,
-- які можуть брати книги, резервувати їх,
-- залишати відгуки та переглядати історію видач.
-- =========================================================
CREATE TABLE "members" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Ідентифікатор читача
  "first_name" varchar(50) NOT NULL,                     -- Ім’я читача
  "last_name" varchar(50) NOT NULL,                      -- Прізвище читача
  "email" varchar(100) UNIQUE NOT NULL,                  -- Email користувача
  "login" varchar(100) UNIQUE NOT NULL,                  -- Логін користувача
  "password_hash" varchar(128) NOT NULL,                 -- Хеш пароля
  "phone" varchar(20) NOT NULL,                          -- Телефон
  "address" varchar(150) NOT NULL,                       -- Адреса
  CONSTRAINT "chk_login_length" CHECK (char_length(login) >= 3),
  CONSTRAINT "chk_phone_length" CHECK (char_length(phone) >= 10),
  CONSTRAINT "chk_address_length" CHECK (char_length(address) >= 5),
  CONSTRAINT "chk_password_hash_length" CHECK (char_length(password_hash) >= 64)
);



-- =========================================================
-- AUTHOR: Shmyhol Evhenii
-- TABLE: copy_statuses
-- Статуси фізичних примірників книг.
-- Бізнес-логіка:
-- Використовується для контролю життєвого циклу
-- фізичних примірників книг.
-- Наприклад: available, borrowed, reserved, lost.
-- =========================================================
CREATE TABLE "copy_statuses" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(15) UNIQUE NOT NULL
);


-- =========================================================
-- AUTHOR: Shmyhol Evhenii
-- TABLE: book_copies
-- Фізичні примірники книг.
-- Бізнес-логіка:
-- Одна книга може мати багато фізичних копій.
-- Саме фізичний примірник видається читачу,
-- резервується або списується.
-- =========================================================
CREATE TABLE "book_copies" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Ідентифікатор примірника
  "book_id" int NOT NULL,                                -- Посилання на книгу
  "barcode" varchar(30) UNIQUE NOT NULL,                 -- Унікальний штрихкод
  "copy_status_id" int NOT NULL                          -- Поточний статус примірника
);


-- =========================================================
-- AUTHOR: Yevhenii Shvaidetskyi
-- TABLE: borrowing_statuses
-- Статуси видач книг.
-- Бізнес-логіка:
-- Визначає поточний стан операції видачі:
-- active, returned, overdue тощо.
-- =========================================================
CREATE TABLE "borrowing_statuses" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(15) UNIQUE NOT NULL
);


-- =========================================================
-- AUTHOR: Yevhenii Shvaidetskyi
-- TABLE: borrowings
-- Операції видачі книг.
-- Бізнес-логіка:
-- Одна операція видачі може містити
-- декілька фізичних примірників книг.
-- Загальна інформація про видачу
-- зберігається тут, а конкретні книги —
-- у borrowing_items. Також можна відслідковувати reading history
-- у комбінації з таблицею borowing_items
-- =========================================================
CREATE TABLE "borrowings" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Ідентифікатор видачі
  "member_id" int NOT NULL,                              -- Читач який взяв книги
  "borrowing_date" timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP, -- Дата видачі
  "status_id" int NOT NULL                               -- Статус видачі
);


-- =========================================================
-- AUTHOR: Yevhenii Shvaidetskyi
-- TABLE: borrowing_items
-- Конкретні примірники книг у видачі.
-- Бізнес-логіка:
-- Дає змогу однією операцією borrowings
-- видати декілька фізичних примірників книг.
-- Також тут відслідковується повернення
-- кожного окремого примірника.
-- 
-- Перевірка дат виконується на рівні application layer.
-- due_date повинна бути пізнішою за borrowing_date,
-- а return_date не може бути раніше borrowing_date.
-- Оскільки borrowing_date зберігається у таблиці borrowings,
-- ці перевірки реалізуються у backend/service layer
-- перед виконанням INSERT або UPDATE у borrowing_items.
-- 
-- Також due_date зберігається у таблиці borrowing_items,
-- оскільки кожен фізичний примірник книги
-- може мати власний термін повернення.
--
-- borrowing_date зберігається у таблиці borrowings
-- як дата створення операції видачі.
--
-- Перевірка того, що due_date > borrowing_date,
-- реалізується на рівні application layer,
-- оскільки CHECK constraint не може звертатись
-- до колонок іншої таблиці.
-- =========================================================
CREATE TABLE "borrowing_items" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "borrowing_id" int NOT NULL,                           -- Посилання на видачу
  "book_copy_id" int NOT NULL,                           -- Посилання на примірник
  "return_date" timestamp,                               -- Фактична дата повернення
  "due_date" timestamp NOT NULL                          -- Кінцева дата повернення
);


-- =========================================================
-- AUTHOR: Viktor Bozhko 
-- TABLE: reservation_statuses
-- Статуси резервування книг.
-- Бізнес-логіка:
-- Дає змогу відслідковувати життєвий цикл
-- резервування: pending, fulfilled, cancelled.
-- =========================================================
CREATE TABLE "reservation_statuses" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(15) UNIQUE NOT NULL
);


-- =========================================================
-- AUTHOR: Viktor Bozhko
-- TABLE: reservations
-- Резервування книг.
-- Бізнес-логіка:
-- Читач може створити резервування,
-- якщо книга тимчасово недоступна.
-- Одне резервування може містити
-- декілька книг.
-- =========================================================
CREATE TABLE "reservations" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "member_id" int NOT NULL,                              -- Читач
  "reservation_date" timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP,
  "status_id" int NOT NULL                               -- Статус резервування
);


-- =========================================================
-- AUTHOR: Viktor Bozhko
-- TABLE: reservation_items
-- Книги або примірники у резервуванні.
-- Бізнес-логіка:
-- Резервування створюється на рівні книги, тому book_id є обов’язковим.
-- Конкретний фізичний примірник може бути невідомий під час створення резервування,
-- оскільки всі копії книги можуть бути видані або недоступні.
-- Коли певна копія стає доступною, система або бібліотекар призначає її
-- до резервування через book_copy_id.
-- Саме тому book_copy_id допускає NULL на початковому етапі.
-- =========================================================
CREATE TABLE "reservation_items" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "reservation_id" int NOT NULL,                         -- Посилання на резервування
  "book_id" int NOT NULL,                                -- Зарезервована книга
  "book_copy_id" int                                     -- Конкретний примірник
);


-- =========================================================
-- AUTHOR: Viktor Bozhko
-- TABLE: book_reviews
-- Відгуки та оцінки книг.
-- Бізнес-логіка:
-- Користувачі можуть залишати оцінки
-- та текстові відгуки після читання книги.
-- Один користувач може залишити
-- лише один відгук на одну книгу.
-- =========================================================
CREATE TABLE "book_reviews" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "member_id" int NOT NULL,                              -- Автор відгуку
  "book_id" int NOT NULL,                                -- Книга
  "review_text" text,                                    -- Текст відгуку
  "created_at" timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP,
  "rate" smallint NOT NULL,                              -- Оцінка книги

  CONSTRAINT "chk_rate"
    CHECK (rate BETWEEN 1 AND 5)
);


-- =========================================================
-- AUTHOR: Gerlib Andrii
-- INSERTS, FOREIGN KEYS, INDEXES
-- =========================================================

-- При видаленні книги
-- автоматично видаляються її зв’язки з жанрами.
-- FK гарантує, що зв’язок genre-book
-- може існувати лише для існуючої книги.
ALTER TABLE "books_genres" ADD FOREIGN KEY ("book_id") REFERENCES "books" ("id") ON DELETE CASCADE;

-- При видаленні жанру
-- автоматично видаляються його зв’язки з книгами.
-- FK гарантує, що книга може бути прив’язана
-- лише до існуючого жанру.
ALTER TABLE "books_genres" ADD FOREIGN KEY ("genre_id") REFERENCES "genres" ("id") ON DELETE CASCADE;

-- Пошук книг за жанром
CREATE INDEX "idx_books_genres_genre_id" ON "books_genres" ("genre_id");

-- Пошук книг за назвою
CREATE INDEX "idx_books_title" ON "books" ("title");


-- =========================================================
-- AUTHOR: Krysa Oleksandr
-- INSERTS, FOREIGN KEYS, INDEXES
-- =========================================================

-- При видаленні книги
-- автоматично видаляються її зв’язки з авторами.
-- FK гарантує, що зв’язок author-book
-- існує лише для реальної книги.
ALTER TABLE "book_authors" ADD FOREIGN KEY ("book_id") REFERENCES "books" ("id") ON DELETE CASCADE;

-- При видаленні автора
-- автоматично видаляються його зв’язки з книгами.
-- FK гарантує, що книга посилається
-- лише на існуючого автора.
ALTER TABLE "book_authors" ADD FOREIGN KEY ("author_id") REFERENCES "authors" ("id") ON DELETE CASCADE;

-- При видаленні книги
-- автоматично видаляються її зв’язки з категоріями.
-- FK гарантує цілісність категоризації книги.
ALTER TABLE "book_categories" ADD FOREIGN KEY ("book_id") REFERENCES "books" ("id") ON DELETE CASCADE;

-- При видаленні категорії
-- автоматично видаляються її зв’язки з книгами.
-- FK гарантує, що категорія існує у довіднику.
ALTER TABLE "book_categories" ADD FOREIGN KEY ("category_id") REFERENCES "categories" ("id") ON DELETE CASCADE;

-- Пошук книг конкретного автора
CREATE INDEX "idx_book_authors_author_id" ON "book_authors" ("author_id");

-- Пошук книг за категорією
CREATE INDEX "idx_book_categories_cat_id" ON "book_categories" ("category_id");


-- =========================================================
-- AUTHOR: Shmyhol Evhenii
-- INSERTS, FOREIGN KEYS, INDEXES
-- =========================================================

INSERT INTO "copy_statuses" ("name")
VALUES
  ('available'),
  ('borrowed'),
  ('reserved'),
  ('damaged'),
  ('lost');

-- Не дозволяє видалити книгу,
-- якщо для неї існують фізичні примірники.
-- FK гарантує, що кожен фізичний примірник
-- належить реальній книзі.
ALTER TABLE "book_copies" ADD FOREIGN KEY ("book_id") REFERENCES "books" ("id") ON DELETE RESTRICT;

-- Не дозволяє видалити статус примірника,
-- якщо він використовується фізичними копіями.
-- FK гарантує, що примірник має
-- валідний статус із довідника.
ALTER TABLE "book_copies" ADD FOREIGN KEY ("copy_status_id") REFERENCES "copy_statuses" ("id") ON DELETE RESTRICT;

-- Пошук примірників за статусом
CREATE INDEX "idx_book_copies_status_id" ON "book_copies" ("copy_status_id");

-- Пошук усіх примірників книги
CREATE INDEX "idx_book_copies_book_id" ON "book_copies" ("book_id");

-- Пошук резервувань книги
CREATE INDEX "idx_reservation_items_book_id" ON "reservation_items" ("book_id");


-- =========================================================
-- AUTHOR: Yevhenii Shvaidetskyi
-- INSERTS, FOREIGN KEYS,  UNIQUE INDEXES, INDEXES
-- =========================================================

INSERT INTO "borrowing_statuses" ("name")
VALUES
  ('active'),
  ('returned'),
  ('overdue');

-- Не дозволяє видалити читача,
-- якщо існує історія видач.
-- FK гарантує, що видача
-- належить існуючому читачу.
ALTER TABLE "borrowings" ADD FOREIGN KEY ("member_id") REFERENCES "members" ("id") ON DELETE RESTRICT;

-- Не дозволяє видалити статус видачі,
-- якщо він використовується.
-- FK гарантує валідний статус операції видачі.
ALTER TABLE "borrowings" ADD FOREIGN KEY ("status_id") REFERENCES "borrowing_statuses" ("id") ON DELETE RESTRICT;

-- При видаленні borrowing
-- автоматично видаляються всі borrowing_items.
-- FK гарантує належність item
-- до конкретної операції видачі.
ALTER TABLE "borrowing_items" ADD FOREIGN KEY ("borrowing_id") REFERENCES "borrowings" ("id") ON DELETE CASCADE;

-- Не дозволяє видалити фізичний примірник,
-- якщо він присутній в історії видач.
-- FK гарантує, що видача посилається
-- на існуючу фізичну копію книги.
ALTER TABLE "borrowing_items" ADD FOREIGN KEY ("book_copy_id") REFERENCES "book_copies" ("id") ON DELETE RESTRICT;

-- Забороняє дублювання одного примірника
-- у межах однієї операції видачі
CREATE UNIQUE INDEX "uq_borrowing_copy"  ON "borrowing_items" ("borrowing_id", "book_copy_id");

-- Забороняє одночасну активну видачу
-- одного фізичного примірника
CREATE UNIQUE INDEX "uq_borrowing_copy_active" ON "borrowing_items" ("book_copy_id")
  WHERE return_date IS NULL;

-- Пошук історії видач користувача
CREATE INDEX "idx_borrowings_member_id" ON "borrowings" ("member_id");

-- Пошук видач за статусом
CREATE INDEX "idx_borrowings_status_id" ON "borrowings" ("status_id");

-- Пошук інформації про конкретний примірник
CREATE INDEX "idx_borrowing_items_copy_id" ON "borrowing_items" ("book_copy_id");


-- =========================================================
-- AUTHOR: Viktor Bozhko
-- INSERTS, FOREIGN KEYS,  UNIQUE INDEXES, INDEXES
-- =========================================================

INSERT INTO "reservation_statuses" ("name")
VALUES
  ('pending'),
  ('fulfilled'),
  ('cancelled');

-- Не дозволяє видалити читача,
-- якщо існує історія резервувань.
-- FK гарантує належність резервування
-- існуючому користувачу.
ALTER TABLE "reservations" ADD FOREIGN KEY ("member_id") REFERENCES "members" ("id") ON DELETE RESTRICT;

-- Не дозволяє видалити статус резервування,
-- якщо він використовується.
-- FK гарантує валідний статус резервування.
ALTER TABLE "reservations" ADD FOREIGN KEY ("status_id") REFERENCES "reservation_statuses" ("id") ON DELETE RESTRICT;

-- При видаленні reservation
-- автоматично видаляються всі reservation_items.
-- FK гарантує належність item
-- до конкретного резервування.
ALTER TABLE "reservation_items" ADD FOREIGN KEY ("reservation_id") REFERENCES "reservations" ("id") ON DELETE CASCADE;

-- Не дозволяє видалити книгу,
-- якщо на неї існують резервування.
-- FK гарантує, що резервування
-- створюється лише для існуючої книги.
ALTER TABLE "reservation_items" ADD FOREIGN KEY ("book_id") REFERENCES "books" ("id") ON DELETE RESTRICT;

-- Якщо фізичний примірник видаляється,
-- reservation залишається активним на рівні книги,
-- тому book_copy_id стає NULL.
-- FK гарантує, що призначений примірник
-- є реальною копією книги.
ALTER TABLE "reservation_items" ADD FOREIGN KEY ("book_copy_id") REFERENCES "book_copies" ("id") ON DELETE SET NULL;

-- При видаленні читача
-- автоматично видаляються його відгуки.
-- FK гарантує, що відгук
-- належить існуючому користувачу.
ALTER TABLE "book_reviews" ADD FOREIGN KEY ("member_id") REFERENCES "members" ("id") ON DELETE CASCADE;

-- При видаленні книги
-- автоматично видаляються всі її відгуки.
-- FK гарантує, що відгук
-- належить існуючій книзі.
ALTER TABLE "book_reviews" ADD FOREIGN KEY ("book_id") REFERENCES "books" ("id") ON DELETE CASCADE;

-- Один користувач може залишити
-- лише один відгук на книгу
CREATE UNIQUE INDEX "uq_one_review_per_book"  ON "book_reviews" ("member_id", "book_id");

-- Пошук резервувань користувача
CREATE INDEX "idx_reservations_member_id" ON "reservations" ("member_id");

-- Пошук резервувань за статусом
CREATE INDEX "idx_reservations_status_id" ON "reservations" ("status_id");

-- Пошук книг у конкретному резервуванні
CREATE INDEX "idx_res_items_res_book" ON "reservation_items" ("reservation_id", "book_id");

-- Пошук резервувань фізичного примірника та унеможливлювання створення дублювання.
-- Одне видання (book_id) фігурує в межах одного резервування лише один раз:
-- модель не передбачає quantity, тому повторні примірники того самого видання
-- у цій схемі не виражаються дублюванням рядків.
-- book_copy_id призначається пізніше (бізнес-логіка), тому унікальність
-- будується по (reservation_id, book_id), а не по примірнику.
CREATE UNIQUE INDEX "uq_reservation_book" ON "reservation_items" ("reservation_id", "book_id");
