Table books {
  Note: 'Основна інформація про книги бібліотеки.'

  id               int          [pk, increment]
  title            varchar(255) [not null]
  isbn             varchar(17)  [unique, not null]
  publication_year smallint

  checks {
    `publication_year BETWEEN 1000 AND 2100` [name: 'chk_pub_year']
  }
}

Table genres {
  Note: 'Довідник жанрів книг.'

  id   int          [pk, increment]
  name varchar(255) [not null, unique]
}

Table books_genres {
  Note: 'Final таблиця. Зв’язок багато-до-багатьох між книгами та жанрами.'

  book_id  int [not null, ref: > books.id]
  genre_id int [not null, ref: > genres.id]

  indexes {
    (book_id, genre_id) [pk]
  }
}

Table authors {
  Note: 'Автори книг.'

  id         int         [pk, increment]
  first_name varchar(50) [not null]
  last_name  varchar(50) [not null]
}

Table book_authors {
  Note: 'Зв’язок many-to-many між книгами та авторами.'

  book_id   int [not null, ref: > books.id]
  author_id int [not null, ref: > authors.id]

  indexes {
    (book_id, author_id) [pk]
  }
}

Table categories {
  Note: 'Довідник категорій книг.'

  id   int          [pk, increment]
  name varchar(40)  [not null, unique]
}

Table book_categories {
  Note: 'Зв’язок many-to-many між книгами та категоріями.'

  book_id     int [not null, ref: > books.id]
  category_id int [not null, ref: > categories.id]

  indexes {
    (book_id, category_id) [pk]
  }
}

Table members {
  Note: 'Читачі бібліотеки та їх контактна інформація.'

  id            int          [pk, increment]
  first_name    varchar(50)  [not null]
  last_name     varchar(50)  [not null]
  email         varchar(100) [not null, unique]
  login         varchar(100) [not null, unique]
  password_hash varchar(128) [not null]
  phone         varchar(20)  [not null]
  address       varchar(150) [not null]

  checks {
    `char_length(login) >= 3` [name: 'chk_login_length']
    `char_length(phone) >= 10` [name: 'chk_phone_length']
    `char_length(address) >= 5` [name: 'chk_address_length']
    `char_length(password_hash) >= 64` [name: 'chk_password_hash_length']
  }
}

Table copy_statuses {
  Note: 'Довідник статусів фізичних примірників книг.'

  id   int         [pk, increment]
  name varchar(15) [not null, unique]
}

Table book_copies {
  Note: 'Облік фізичних примірників книг.'

  id             int         [pk, increment]
  book_id        int         [not null, ref: > books.id]
  barcode        varchar(30) [not null, unique]
  copy_status_id int         [not null, ref: > copy_statuses.id]
}

Table borrowing_statuses {
  Note: 'Довідник статусів видачі книг.'

  id   int         [pk, increment]
  name varchar(15) [not null, unique]
}

Table borrowings {
  Note: 'Операції видачі та повернення книг читачами.'

  id               int       [pk, increment]
  member_id        int       [not null, ref: > members.id]
  borrowing_date   timestamp [not null, default: `now()`]
  due_date         timestamp [not null]
  return_date      timestamp
  status_id        int       [not null, ref: > borrowing_statuses.id]
  created_at       timestamp [not null, default: `now()`]
  updated_at       timestamp [not null, default: `now()`]

  checks {
    `due_date > borrowing_date` [name: 'chk_due_after_borrow']
    `return_date IS NULL OR return_date >= borrowing_date` [name: 'chk_return_after_borrow']
  }

  indexes {
    (member_id, status_id) [name: 'idx_borrowings_member_status']
    (member_id) [name: 'idx_borrowings_member']
  }
}

Table borrowing_items {
  Note: 'Конкретні примірники книг у межах однієї видачі.'

  id             int       [pk, increment]
  borrowing_id   int       [not null, ref: > borrowings.id]
  book_copy_id   int       [not null, ref: > book_copies.id]
  return_date    timestamp
  due_date       timestamp [not null]

  indexes {
    (book_copy_id) [name: 'idx_borrowing_items_copy']
    (borrowing_id, book_copy_id) [unique, name: 'uq_borrowing_copy']
  }
}

Table reservation_statuses {
  Note: 'Довідник статусів резервування книг.'

  id   int         [pk, increment]
  name varchar(15) [not null, unique]
}

Table reservations {
  Note: 'Резервування книг читачами.'

  id                int       [pk, increment]
  member_id         int       [not null, ref: > members.id]
  reservation_date  timestamp [not null, default: `now()`]
  status_id         int       [not null, ref: > reservation_statuses.id]
  created_at        timestamp [not null, default: `now()`]
  updated_at        timestamp [not null, default: `now()`]

  indexes {
    (member_id, status_id) [name: 'idx_reservations_member_status']
    (member_id) [name: 'idx_reservations_member']
  }
}

Table reservation_items {
  Note: 'Книги або конкретні примірники, включені до резервування.'

  id               int [pk, increment]
  reservation_id   int [not null, ref: > reservations.id]
  book_id          int [not null, ref: > books.id]
  book_copy_id     int [ref: > book_copies.id]

  indexes {
    (reservation_id, book_id) [unique, name: 'uq_reservation_book']
	  (book_id) [name: 'idx_res_items_book']
    (book_copy_id) [name: 'idx_res_items_copy']
  }
}

Table book_reviews {
  Note: 'Відгуки та оцінки книг читачами.'

  id          int       [pk, increment]
  member_id   int       [not null, ref: > members.id]
  book_id     int       [not null, ref: > books.id]
  review_text text
  created_at  timestamp [not null, default: `now()`]
  rate        smallint  [not null]

  checks {
    `rate BETWEEN 1 AND 5` [name: 'chk_book_review_rate']
  }

  indexes {
    (member_id, book_id) [unique, name: 'uq_one_review_per_book']
  }
}

TableGroup "Core Tables" {
  books
  authors
  members
  borrowings
}

TableGroup "Reference Tables" {
  genres
  books_genres
  categories
  copy_statuses
  borrowing_statuses
  reservation_statuses
}

TableGroup "Relation Tables" {
  book_genre
  book_authors
  book_categories
  borrowing_items
  reservation_items
}

TableGroup "Additional Features" {
  reservations
  book_reviews
  book_copies
}
